--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -23,8 +23,7 @@
     <!-- Old School - table layout -->
     <table style="width:100%">
       <tr>
-	<td></td>
-	<td>	  
+	<td colspan="2">	  
 	  <div id="header">
 	    <img id="logo" src="static/images/logo.png" width="300">
 	  </div>
