tweak copyright language

--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -20,7 +20,9 @@
       Version: <div id="version">{{.Version}}</div><br>
       <br>
       &copy; 2020 Steve Tynor.  All Rights Reserved.<br>
-      Based on the Digital Keyboards Inc. / Mulogix SYNHCS Kaypro application.
+      Based on the Digital Keyboards Inc. / Mulogix SYNHCS Kaypro
+      application, copyrighted 1984 Digital Keyboards Inc. and 1986
+      Mulogix, Inc.
     </center>
     
     <script src="static/js/about.js"></script>
