--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -23,7 +23,10 @@
     <!-- Old School - table layout -->
     <table style="width:100%">
       <tr>
-	<td colspan="2">	  
+	<td>
+	  Synergy: <div id="firmwareVersion">{{.Version}}</div><br>
+	</td>
+	<td> 
 	  <div id="header">
 	    <img id="logo" src="static/images/logo.png" width="300">
 	  </div>
