runtime flag to control serial verbosity; dont connect to Synergy during startup

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -24,7 +24,7 @@
     <table style="width:100%">
       <tr>
 	<td>
-	  Synergy: <div id="firmwareVersion">{{.Version}}</div><br>
+	  Synergy: <span id="firmwareVersion">Not Connected</span><br>
 	</td>
 	<td> 
 	  <div id="header">
