improved styling; mimic the synergy front panel for the header; right margin is not right yet

--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -12,8 +12,9 @@
   </head>
   
   <body>
+    <div class="aboutbox">
     <center>
-      <img src="static/images/logo.png" width="200"><br>
+      <img src="static/images/logo-transparent.png" width="200"><br>
       <br>
       a librarian/editor for the DK Synergy<br>
       <br>
@@ -24,6 +25,7 @@
       application, copyrighted 1984 Digital Keyboards Inc. and 1986
       Mulogix, Inc.
     </center>
+    </div>
     
     <script src="static/js/about.js"></script>
     <script src="static/lib/astiloader/astiloader.js"></script>
