style tweaks to get windows to look same as mac

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -23,7 +23,7 @@
   </style>
   
   <body>    
-    <div class="container d-flex flex-column h-100" style="padding:0px;">
+    <div class="container d-flex flex-column h-100 w-100 topContainer">
       <div class="row flex-shrink-0 navbar">
 	<div class="headerContainer">
 	  <div class="header d-flex">
