table view for CRT - load tmp disabled

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -12,7 +12,8 @@
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/Chart.bundle.min.js"></script>
     <script src="static/js/index.js"></script>
-    <script src="static/js/view.js"></script>
+    <script src="static/js/viewVCE.js"></script>
+    <script src="static/js/viewCRT.js"></script>
 
   </head>
   
