--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1,3 +1,9 @@
+<table id="backToCRT" onclick="index.viewLoadedCRT()" style="cursor:pointer;">
+  <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="35"></td></tr>
+  <tr><td class="centered"><span>Back to CRT</span></td></tr>
+</table>
+
+<br><br>
 
 <!-- Old School - table layout -->
 <table style="width:100%">
