--- a/resources/app/viewCRT.html
+++ b/resources/app/viewCRT.html
@@ -1,15 +1,8 @@
-<table>
-  <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="35"></td></tr>
-  <tr><td class="centered"><span>Load CRT</span></td></tr>
-</table>
+<span id="crt_path"></span>
 
+<input class="button" onclick="index.loadCRT(crt_name,crt_path)"><img src="static/images/button-off.png"></input>
 
-<br><br>
-<span class="centered" id="crt_path"></span>
-<br><br>
-
-
-
+<br><br><br>
 
 <div class="row">
   <div class="col">
@@ -25,51 +18,51 @@
       <tbody>
 	<tr>
 	  <th scope="row">1</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_1"></span></td>
+	  <td><span id="crt_voicename_1"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">2</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_2"></span></td>
+	  <td><span id="crt_voicename_2"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">3</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_3"></span></td>
+	  <td><span id="crt_voicename_3"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">4</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_4"></span></td>
+	  <td><span id="crt_voicename_4"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">5</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_5"></span></td>
+	  <td><span id="crt_voicename_5"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">6</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_6"></span></td>
+	  <td><span id="crt_voicename_6"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">7</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_7"></span></td>
+	  <td><span id="crt_voicename_7"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">8</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_8"></span></td>
+	  <td><span id="crt_voicename_8"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">9</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_9"></span></td>
+	  <td><span id="crt_voicename_9"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">10</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_10"></span></td>
+	  <td><span id="crt_voicename_10"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">11</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_11"></span></td>
+	  <td><span id="crt_voicename_11"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">12</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_12"></span></td>
+	  <td><span id="crt_voicename_12"></span></td>
 	</tr>
       </tbody>
     </table>
@@ -90,51 +83,51 @@
 	
 	<tr>
 	  <th scope="row">13</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_13"></span></td>
+	  <td><span id="crt_voicename_13"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">14</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_14"></span></td>
+	  <td><span id="crt_voicename_14"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">15</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_15"></span></td>
+	  <td><span id="crt_voicename_15"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">16</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_16"></span></td>
+	  <td><span id="crt_voicename_16"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">17</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_17"></span></td>
+	  <td><span id="crt_voicename_17"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">18</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_18"></span></td>
+	  <td><span id="crt_voicename_18"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">19</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_19"></span></td>
+	  <td><span id="crt_voicename_19"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">20</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_20"></span></td>
+	  <td><span id="crt_voicename_20"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">21</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_21"></span></td>
+	  <td><span id="crt_voicename_21"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">22</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_22"></span></td>
+	  <td><span id="crt_voicename_22"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">23</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_23"></span></td>
+	  <td><span id="crt_voicename_23"></span></td>
 	</tr>
 	<tr>
 	  <th scope="row">24</th>
-	  <td><span style="cursor:pointer;" id="crt_voicename_24"></span></td>
+	  <td><span id="crt_voicename_24"></span></td>
 	</tr>
       </tbody>
   </div>
