--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title>SYNERGIZE</title>
+    <title>Synergize</title>
     <meta charset="UTF-8">
     
     <link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
@@ -32,6 +32,35 @@
 	      Synergy:<br>&nbsp;&nbsp;<span style="color: --light;" id="firmwareVersion">Not Connected</span>
 	    </div>
 	    <div class="headerSeparator p-2"></div>
+
+	    <form class="form-inline" style="width:30em;">
+	      <table>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span>Connect</span></td></tr>
+	      </table>
+	    </form>
+
+	    <form class="form-inline" style="width:30em;">
+	      <table>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span>Load/Save</span></td></tr>
+	      </table>
+	    </form>
+
+	    <form class="form-inline" style="width:30em;">
+	      <table>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span>Diagnostics</span></td></tr>
+	      </table>
+	    </form>
+
+	    <form class="form-inline" style="width:30em;">
+	      <table>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span>Help</span></td></tr>
+	      </table>
+	    </form>
+
 	    <div class="flex-grow-1 p-2"></div>
 	    <div class="navbar-brand p-2">
 	      <img id="logo" src="static/images/logo-transparent.png" width="200">
