--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
   <head>
-    <title></title>
+    <title>About Synergize</title>
     <meta charset="UTF-8">
     
     <link rel="stylesheet" href="static/css/base.css">
