use alert() for info and error msgs

--- a/resources/app/viewCRT.html
+++ b/resources/app/viewCRT.html
@@ -1,4 +1,4 @@
-<table>
+<table onclick="index.loadCRT(crt_name,crt_path);">
   <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="35"></td></tr>
   <tr><td class="centered"><span>Load CRT</span></td></tr>
 </table>
