--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -33,33 +33,42 @@
 	    </div>
 	    <div class="headerSeparator p-2"></div>
 
-	    <form class="form-inline" style="width:30em;">
-	      <table>
-		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
-		<tr><td class="centered"><span>Connect</span></td></tr>
-	      </table>
-	    </form>
-
-	    <form class="form-inline" style="width:30em;">
-	      <table>
+	    <form class="form-inline dropdown" style="width:30em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
 		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
 		<tr><td class="centered"><span>Load/Save</span></td></tr>
 	      </table>
+	      <div class="dropdown-content" id="loadSaveDropdown-content">
+		<a href="#" onclick="index.saveSYNDialog();">Save Synergy State (SYN)</a>
+		<a href="#" onclick="index.loadSYNDialog();">Load Synergy State (SYN)</a>
+		<a href="#" onclick="index.loadCRTDialog();">Load Cartridge file (CRT)</a>
+		<a href="#" onclick="index.loadVCEDialog();">Load Voice file (VCE)</a>
+	      </div>
 	    </form>
 
-	    <form class="form-inline" style="width:30em;">
-	      <table>
-		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
-		<tr><td class="centered"><span>Diagnostics</span></td></tr>
-	      </table>
-	    </form>
-
-	    <form class="form-inline" style="width:30em;">
-	      <table>
+	    <form class="form-inline dropdown" style="width:30em;">
+	      <table onclick="index.dropdownMenu('helpDropdown-content');" class="dropbtn">
 		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
 		<tr><td class="centered"><span>Help</span></td></tr>
 	      </table>
+	      <div class="dropdown-content" id="helpDropdown-content">
+		<a href="#" onclick="index.about();">About</a>
+		<a href="#" onclick="index.preferences();">Preferences</a>
+	      </div>
 	    </form>
+
+	    <form class="form-inline dropdown" style="width:30em;">
+	      <table onclick="index.dropdownMenu('connectDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span>Connect</span></td></tr>
+	      </table>
+	      <div class="dropdown-content" id="connectDropdown-content">
+		<a href="#" onclick="index.connectToSynergy();">Connect to Synergy</a>
+		<a href="#" onclick="index.disableVRAM();">Turn off Synergy VRAM</a>
+		<a href="#" onclick="index.viewDiag();">Serial Diagnostics</a>
+	      </div>
+	    </form>
+
 
 	    <div class="flex-grow-1 p-2"></div>
 	    <div class="navbar-brand p-2">
