smaller fonts, more compact main window, fix styling on about window

--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -4,10 +4,8 @@
     <title>About Synergize</title>
     <meta charset="UTF-8">
     
+    <link rel="stylesheet" href="static/css/bootstrap.min-darkly.css">
     <link rel="stylesheet" href="static/css/base.css">
-    <link rel="stylesheet" href="static/lib/astiloader/astiloader.css">
-    <link rel="stylesheet" href="static/lib/astimodaler/astimodaler.css">
-    <link rel="stylesheet" href="static/lib/astinotifier/astinotifier.css">
     
   </head>
   
