--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -28,15 +28,77 @@
       <div class="row flex-shrink-0 navbar">
 	<div class="headerContainer">
 	  <div class="header d-flex vertical-align-center">
+
+	    <!--
+TEST a "more button" design: 
+
+
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+	    <div class="navbar-text dropdown" style="width:15em;">
+	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
+		<tr><td class="centered"><span style="font-size:x-small;">ABC123456</span></td></tr>
+	      </table>
+	    </div>
+-->
+
 	    <div class="navbar-text p-2">
-	      Synergy:<br>&nbsp;&nbsp;<span style="color: --light;" id="firmwareVersion">Not Connected</span>
+	      <span class="buttonText">Synergy:<br>&nbsp;&nbsp;</span><span class="buttonText" id="firmwareVersion">Not Connected</span>
 	    </div>
 	    <div class="headerSeparator p-2"></div>
 
+
 	    <div class="navbar-text dropdown" style="width:30em;">
 	      <table onclick="index.dropdownMenu('loadSaveDropdown-content');" class="dropbtn">
-		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
-		<tr><td class="centered"><span>Load/Save</span></td></tr>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td></tr>
+		<tr><td class="centered"><span class="buttonText">Load/Save</span></td></tr>
 	      </table>
 	      <div class="dropdown-content" id="loadSaveDropdown-content">
 		<a href="#" onclick="index.saveSYNDialog();">Save Synergy State (SYN)</a>
@@ -48,8 +110,8 @@
 
 	    <div class="navbar-text dropdown" style="width:30em;">
 	      <table onclick="index.dropdownMenu('helpDropdown-content');" class="dropbtn">
-		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
-		<tr><td class="centered"><span>Help</span></td></tr>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td></tr>
+		<tr><td class="centered"><span class="buttonText">Help</span></td></tr>
 	      </table>
 	      <div class="dropdown-content" id="helpDropdown-content">
 		<a href="#" onclick="index.showAbout();">About</a>
@@ -59,8 +121,8 @@
 
 	    <div class="navbar-text dropdown" style="width:30em;">
 	      <table onclick="index.dropdownMenu('connectDropdown-content');" class="dropbtn">
-		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="35"></td></tr>
-		<tr><td class="centered"><span>Connect</span></td></tr>
+		<tr><td class="centered"><img src="static/images/grey-button-off-full.png" height="30"></td></tr>
+		<tr><td class="centered"><span class="buttonText">Connect</span></td></tr>
 	      </table>
 	      <div class="dropdown-content" id="connectDropdown-content">
 		<a href="#" onclick="index.connectToSynergy();">Connect to Synergy</a>
