--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1,4 +1,4 @@
-<table id="backToCRT" onclick="index.viewLoadedCRT()" style="cursor:pointer;">
+<table id="backToCRT" onclick="index.viewLoadedCRT()" class="dropbtn">
   <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="30"></td></tr>
   <tr><td class="centered"><span class="buttonText">Back to CRT</span></td></tr>
 </table>
