--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -18,7 +18,7 @@
       <br>
       Version: <div id="version">{{.Version}}</div><br>
       <br>
-      &copy; 2020 Steve Tynor.  All Rights Reserved.<br>
+      &copy; 2020 Steve Tynor (chinenual).  All Rights Reserved.<br>
       Based on the Digital Keyboards Inc. / Mulogix SYNHCS Kaypro
       application, copyrighted 1984 Digital Keyboards Inc. and 1986
       Mulogix, Inc.
