replicate SYNHCS voice display table

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -6,7 +6,59 @@
 <br><br>
 
 <!-- Old School - table layout -->
+
 <table style="width:100%">
+  <thead>
+    <tr>
+      <th>Osc</th>
+      <th colspan=3 style="text-align:center;">Patch</th>
+      <th>Hrm#</th>
+      <th>Detune</th>
+      <th>Wave</th>
+      <th>Key Prop</th>
+      <th>Filters</th>
+    </tr>
+    <tr>
+      <th></th>
+      <th>Freq</th>
+      <th>Addr</th>
+      <th>Out</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody id="patchTbody">
+    <tr>
+      <td>1&lt;</td>
+      <td></td>
+      <td></td>
+      <td>2</td>
+      <td>3</td>
+      <td>15</td>
+      <td>S</td>
+      <td>k</td>
+      <td>Bf</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>2</td>
+      <td></td>
+      <td>2</td>
+      <td>1</td>
+      <td>0</td>
+      <td>S</td>
+      <td></td>
+      <td>Bf</td>
+    </tr>
+  </tbody>
+</table>
+
+<br><br>
+
+<table style="width:100%">   
   <tr>
     <td>
       <table>
