--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1,3 +1,14 @@
+<ul id="vceTabs" class="nav nav-pills">
+  <li class="nav-item"><a class="active nav-link" data-toggle="pill" href="#vceVoiceTab">Voice</a></li>
+  <li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceEnvsTab">Envelopes</a></li>
+  <li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceFiltersTab">Filters</a></li>
+  <li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceKeyEqTab">Key Eq</a></li>
+  <li class="nav-item"><a class="nav-link" data-toggle="pill" href="#vceKeyPropTab">Key Prop</a></li>
+</ul>
+
+<div class="tab-content">
+  <div id="vceVoiceTab" class="tab-pane fade show active">
+    
 <table id="backToCRT" onclick="index.viewLoadedCRT()" class="dropbtn">
   <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="30"></td></tr>
   <tr><td class="centered"><span class="buttonText">Back to CRT</span></td></tr>
@@ -110,3 +121,23 @@
   </tr>
 </table>
   
+  </div>
+
+  <div id="vceEnvsTab" class="tab-pane fade ">
+    tab 2 stuff
+  </div>
+  
+  <div id="vceFiltersTab" class="tab-pane fade ">
+    tab 3 stuff
+  </div>
+  
+  <div id="vceKeyEqTab" class="tab-pane fade ">
+      <canvas id="keyEqChart" height="300" width="400" style="border:solid #666;"></canvas>
+  </div>
+
+  <div id="vceKeyPropTab" class="tab-pane fade ">
+      <canvas id="keyPropChart" height="300" width="400" style="border:solid #666;"></canvas>
+  </div>
+
+</div>
+
