env time values scaled correctly

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -143,6 +143,7 @@
       #envTable th { text-align: center;}
       #envTable td { color: #aaa; }
       #envTable td.val { color: #fff; width:3em; }
+      #envTable td.total { color: #aaa;  }
       #envTable th { color: #aaa; }
       #envTable th.val { color: #fff; }
     </style>
@@ -198,8 +199,8 @@
 	  <td class="val">2</td>
 	  <td class="val">0</td>
 	  <td class="val">0</td>
-	  <td class="val">0</td>
-	  <td class="val">0</td>
+	  <td class="val total">0</td>
+	  <td class="val total">0</td>
 
 	  <td rowspan="16" style="padding:10px;"></td>
 	  <td rowspan="16" style="border-left:1px solid #666;padding:10px;">	
@@ -208,8 +209,8 @@
 	  <td class="val">64</td>
 	  <td class="val">26</td>
 	  <td class="val">28</td>
-	  <td class="val">26</td>
-	  <td class="val">28</td>
+	  <td class="val total">26</td>
+	  <td class="val total">28</td>
 	  <td>1</td>
 	</tr>
 	<tr>
@@ -219,16 +220,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>2</td>
 	</tr>
 	<tr>
@@ -238,16 +239,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>3</td>
 	</tr>
 	<tr>
@@ -257,16 +258,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>4</td>
 	</tr>
 	<tr>
@@ -276,16 +277,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>5</td>
 	</tr>
 	<tr>
@@ -295,16 +296,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>6</td>
 	</tr>
 	<tr>
@@ -314,16 +315,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>7</td>
 	</tr>
 	<tr>
@@ -333,16 +334,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>8</td>
 	</tr>
 	<tr>
@@ -352,16 +353,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>9</td>
 	</tr>
 	<tr>
@@ -371,16 +372,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>10</td>
 	</tr>
 	<tr>
@@ -390,16 +391,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>11</td>
 	</tr>
 	<tr>
@@ -409,16 +410,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>12</td>
 	</tr>
 	<tr>
@@ -428,16 +429,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>13</td>
 	</tr>
 	<tr>
@@ -447,16 +448,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>14</td>
 	</tr>
 	<tr>
@@ -466,16 +467,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>15</td>
 	</tr>
 	<tr>
@@ -485,16 +486,16 @@
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  
 	  <td class="val">S&gt;</td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
 	  <td class="val"></td>
-	  <td class="val"></td>
-	  <td class="val"></td>
+	  <td class="val total"></td>
+	  <td class="val total"></td>
 	  <td>16</td>
 	</tr>
       </tbody>
