--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -129,7 +129,8 @@
   </div>
 
   <div id="vceEnvsTab" class="tab-pane fade ">
-    
+
+    Oscillator:&nbsp;
     <select id="envOscSelect" onchange="viewVCE.envChartUpdate(this.options[this.selectedIndex].value)">
       <option>1</option>
       <option>2</option>
@@ -137,6 +138,7 @@
       <option>3</option>
     </select>
 
+    <canvas id="envChart" height="400" width="600" style="border:solid #666;"></canvas>
 
     <style>
       #envTable td { text-align: center;}
@@ -504,6 +506,8 @@
   </div>
   
   <div id="vceFiltersTab" class="tab-pane fade ">
+
+    Filter:&nbsp;
     <select id="filterSelect" onchange="viewVCE.filtersChartUpdate(this.options[this.selectedIndex].value,this.options[this.selectedIndex].innerHTML)">
       <option>Bf 1</option>
       <option>Bf 2</option>
