allow selective env view

--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -131,11 +131,20 @@
   <div id="vceEnvsTab" class="tab-pane fade ">
 
     Oscillator:&nbsp;
-    <select id="envOscSelect" onchange="viewVCE.envChartUpdate(this.options[this.selectedIndex].value)">
+    <select id="envOscSelect" onchange="viewVCE.envChartUpdate(this.options[this.selectedIndex].value, $('#envEnvSelect').val())">
       <option>1</option>
       <option>2</option>
       <option>3</option>
-      <option>3</option>
+     <option>3</option>
+    </select>
+
+    &nbsp;&nbsp;&nbsp;&nbsp;Envelopes:&nbsp;
+    <select id="envEnvSelect" onchange="viewVCE.envChartUpdate($('#envOscSelect').val(), this.options[this.selectedIndex].value)">
+      <option value="-1">All</option>
+      <option value="0">Freq Low</option>
+      <option value="1">Freq Up</option>
+      <option value="2">Amp Low</option>
+      <option value="3">Amp Up</option>
     </select>
 
     <canvas id="envChart" height="400" width="600" style="border:solid #666;"></canvas>
