--- a/resources/app/viewVCE.html
+++ b/resources/app/viewVCE.html
@@ -1,5 +1,9 @@
 
-<span class="centered" id="vce_name"></span>
+<span id="backToCRT" onclick="index.viewLoadedCRT()" style="cursor: pointer;">
+  <span id="vce_crt_name"></span>
+  &nbsp;&nbsp;&gt;&nbsp;&nbsp;
+</span>
+<span id="vce_name"></span>
 <br><br>
 
 <ul id="vceTabs" class="nav nav-pills">
@@ -14,13 +18,6 @@
 <div class="tab-content">
   <div id="vceVoiceTab" class="tab-pane fade show active">
     
-<table id="backToCRT" onclick="index.viewLoadedCRT()" class="dropbtn">
-  <tr><td class="centered"><img src="static/images/red-button-off-full.png" height="30"></td></tr>
-  <tr><td class="centered"><span class="buttonText">Back to CRT</span></td></tr>
-</table>
-
-<br><br>
-
 <!-- Old School - table layout -->
 
 <table style="width:100%">
