refactor javascript - one js file per tab

--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -16,6 +16,11 @@
     <script src="static/js/Chart.bundle.min.js"></script>
     <script src="static/js/index.js"></script>
     <script src="static/js/viewVCE.js"></script>
+    <script src="static/js/viewVCE_voice.js"></script>
+    <script src="static/js/viewVCE_envs.js"></script>
+    <script src="static/js/viewVCE_filters.js"></script>
+    <script src="static/js/viewVCE_keyeq.js"></script>
+    <script src="static/js/viewVCE_keyprop.js"></script>
     <script src="static/js/viewCRT.js"></script>
 
   </head>
