--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -18,8 +18,14 @@
       <br>
       Version: <div id="version">{{.Version}}</div><br>
       <br>
+      Updates and Support are available via the <a href="https://chinenual.github.com/synergize" target="_blank">Synergize github project</a>. 
+      Please report bugs or suggest new features via an <a href="https://github.com/chinenual/synergize/issues" target="_blank">Issue</a> there.  
+      If you don't have a github account, you can send bug reports, feature requests, kudos via email to 
+      <a href="mailto:support@chinenual.com">support@chinenual.com</a>
+      <br>
+      <br>
       &copy; 2020 Steve Tynor (chinenual).  All Rights Reserved.<br>
-      Based on the Digital Keyboards Inc. / Mulogix SYNHCS Kaypro
+      Inspired by the Digital Keyboards Inc. / Mulogix SYNHCS Kaypro
       application, copyrighted 1984 Digital Keyboards Inc. and 1986
       Mulogix, Inc.
     </center>
