infer "patch type" from the osc OPTCH values

--- a/resources/app/about.html
+++ b/resources/app/about.html
@@ -31,6 +31,8 @@
             target="_blank">Issue</a> there.
           If you don't have a github account, you can send bug reports, feature requests, kudos via email to
           <a href="mailto:support@chinenual.com">support@chinenual.com</a>
+          Join the Synergize Slack group to help shape its future
+          (send an email to the support account to request an invitation).
           <br>
           <br>
           &copy; 2020 Steve Tynor (chinenual). All Rights Reserved.<br>
